--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
  </main>
  
   <section class="bg-white my-24 ">
-    <div class="md:container md:mx-auto  content-end">
+    <div class="md:container md:mx-auto">
       <div class="hero-content flex-col lg:flex-row bg-[#FFF9F4]  rounded-xl ">
         <div class="text-center lg:text-left">
           <img src="c1-assets/cute-pet-small.png" alt="">
